변수명 변경, 기타 리팩토링