@@ -6,8 +6,6 @@ import com.example.csemaster.exception.CustomException;
 import com.example.csemaster.exception.ExceptionEnum;
 import com.example.csemaster.entity.SubjectEntity;
 import com.example.csemaster.entity.ChapterEntity;
-import com.example.csemaster.features.quiz.QuizValidator;
-import com.example.csemaster.mapper.SubjectMapper;
 import com.example.csemaster.repository.ChapterRepository;
 import com.example.csemaster.repository.QuizSubjectRepository;
 import jakarta.transaction.Transactional;
@@ -29,7 +27,7 @@ public class QuizSubjectService {
 
     public List<SubjectResponse> getAllSubject() {
         List<SubjectEntity> subjects = quizSubjectRepository.findAll();
-        return subjects.stream().map(SubjectMapper.INSTANCE::toResponse).collect(Collectors.toList());
+        return subjects.stream().map(e -> new SubjectResponse(e.getSubject(), e.getChapters().stream().map(ChapterEntity::getChapter).toList())).collect(Collectors.toList());
     }
 
     public List<String> addSubject(SubjectRequest subjectRequest) {
@@ -98,31 +96,41 @@ public class QuizSubjectService {
     }
 
    public SubjectDTO updateDetailSubject(ChapterUpdateDTO updateDTO) {
+       // 기존의 텍스트와 새로운 텍스트 비교시 변경점이 있는지 확인
+       if (updateDTO.getChapter().equals(updateDTO.getNewChapter())) {
+           throw new CustomException(ExceptionEnum.NO_CHANGE);
+       }
+
        Long subjectId = quizSubjectRepository.findBySubject(updateDTO.getSubject()).map(SubjectEntity::getSubjectId).orElse(null);
 
        if (subjectId == null) {
            throw new CustomException(ExceptionEnum.NOT_FOUND_SUBJECT);
        }
 
-       // 기존의 텍스트와 새로운 텍스트 비교시 변경점이 있는지 확인
-       if (updateDTO.getChapter().equals(updateDTO.getNewChapter())) {
-           throw new CustomException(ExceptionEnum.NO_CHANGE);
-       }
-
        ChapterEntity chapter = chapterRepository.findBySubjectIdAndChapter(subjectId, updateDTO.getChapter()).orElse(null);
        if (chapter == null) {
-           throw new CustomException(ExceptionEnum.NOT_FOUND_DETAIL_SUBJECT);
+           throw new CustomException(ExceptionEnum.NOT_FOUND_CHAPTER);
        }
 
+       // 챕터명과 과목ID로 기본키가 지정되어 있어, (기본키를 변경하면 안되는지 몰랐음)
+       // 기본키 변경을 허용하지 않는 JPA 특성상 삭제 후 추가해야함
+
        // 챕터명 변경
-       chapter.setChapter(updateDTO.getNewChapter());
-       chapterRepository.save(chapter);
+       Integer cacheIdx = chapter.getSortIndex();
+       chapterRepository.delete(chapter);
+
+       ChapterEntity newChapter = new ChapterEntity();
+       newChapter.setSubjectId(subjectId);
+       newChapter.setSortIndex(cacheIdx);
+       newChapter.setChapter(updateDTO.getNewChapter());
+       chapterRepository.save(newChapter);
+       chapterRepository.flush();
 
        // 변경된 챕터 목록 반환
        return new SubjectDTO(updateDTO.getSubject(), chapterRepository.findChapterBySubject(updateDTO.getSubject()));
     }
 
-    public ResponseEntity<?> deleteSubject(SubjectRequest subjectRequest) {
+    public List<String> deleteSubject(SubjectRequest subjectRequest) {
         Optional<SubjectEntity> subjectEntity = quizSubjectRepository.findBySubject(subjectRequest.getSubject());
         if (subjectEntity.isEmpty()) {
             throw new CustomException(ExceptionEnum.NOT_FOUND_SUBJECT);
@@ -130,7 +138,7 @@ public class QuizSubjectService {
 
         quizSubjectRepository.delete(subjectEntity.get());
 
-        return ResponseEntity.ok().build();
+        return quizSubjectRepository.getAllSubject();
     }
 
     public SubjectDTO deleteChapter(String subject, String chapter) {
@@ -142,15 +150,15 @@ public class QuizSubjectService {
             // 검색한 전체 목록에서 삭제할 레코드 검색
             ChapterEntity delChapter = chapters.stream().filter(e -> e.getChapter().equals(chapter)).findAny().orElse(null);
             // 검색 결과 없으면 유효하지 않은 요청
-            if (delChapter == null) throw new CustomException(ExceptionEnum.NOT_FOUND_DETAIL_SUBJECT);
+            if (delChapter == null) throw new CustomException(ExceptionEnum.NOT_FOUND_CHAPTER);
             // 삭제한 챕터 뒤부터 index 1만큼 당기기
             for (int i = delChapter.getSortIndex() + 1; i < chapters.size(); i++) {
                 chapters.get(i).setSortIndex(i - 1);
             }
 
             // 삭제 후 바꾼 index 저장
-            chapterRepository.delete(delChapter);
             chapterRepository.saveAll(chapters);
+            chapterRepository.delete(delChapter);
             chapterRepository.flush();
         }
 
@@ -158,24 +166,25 @@ public class QuizSubjectService {
     }
 
     @Transactional
-    public SubjectResponse adjustDetailSubject(String subject, List<ChapterDTO> detailSubject) {
+    public SubjectResponse adjustDetailSubject(String subject, List<ChapterDTO> chapters) {
         List<ChapterEntity> bass = chapterRepository.findBySubject(subject);
         // 검색 결과가 없으면 해당 subject 가 유효하지 않는다는 의미
         if (bass.isEmpty()) throw new CustomException(ExceptionEnum.NOT_FOUND_SUBJECT);
+
         // 기존과 변경 사항의 개수가 다를 경우 잘못된 요청 값임
-        else if (bass.size() != detailSubject.size()) throw new CustomException(ExceptionEnum.NOT_FOUND_DETAIL_SUBJECT);
+        else if (bass.size() != chapters.size()) throw new CustomException(ExceptionEnum.NOT_FOUND_CHAPTER);
         else {
             // 편한 비교를 위해 Detail subject 순으로 정렬
             bass.sort(Comparator.comparing(ChapterEntity::getChapter));
-            detailSubject.sort(Comparator.comparing(ChapterDTO::getDetailSubject));
+            chapters.sort(Comparator.comparing(ChapterDTO::getChapter));
 
             for (int i = 0; i < bass.size(); i++) {
                 // 정렬이 됐기 때문에 같은 index 의 detail subject 가 서로 다르면 잘못된 값임
-                if (bass.get(i).getChapter().equals(detailSubject.get(i).getDetailSubject())) {
+                if (bass.get(i).getChapter().equals(chapters.get(i).getChapter())) {
                     // 일치할 경우 새로운 정렬 기준으로 변경
-                    bass.get(i).setSortIndex(detailSubject.get(i).getSortIndex());
+                    bass.get(i).setSortIndex(chapters.get(i).getSortIndex());
                 } else {
-                    throw new CustomException(ExceptionEnum.NOT_FOUND_DETAIL_SUBJECT);
+                    throw new CustomException(ExceptionEnum.NOT_FOUND_CHAPTER);
                 }
             }
 
@@ -190,7 +199,7 @@ public class QuizSubjectService {
                 }
             }
 
-            // 변경사항 저장
+            // 변경 사항 저장
             chapterRepository.saveAll(bass);
 
             return new SubjectResponse(subject, bass.stream().map(ChapterEntity::getChapter).toList());
